Updated CSS to ensure section tags are aligned along top edge

--- a/style.less
+++ b/style.less
@@ -65,6 +65,7 @@ header {
 	h1 { font-family: Coustard, sans-serif; color: #420b2a; }
 
 	section {
+		vertical-align: top;
 		display: inline-block;
 		width: 290px;
 		margin-right: 20px;
